# applicant-mgmt-sys

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
cursor-docs/: CURRENT_STATUS.md  PROJECT_OVERVIEW.md  SYSTEM_ARCHITECTURE.md
frontend/: application.html  applications.html  exports.html  group.html  groups.html  index.html  login.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  application-detail-page.js  applications-page.js  auth.js  config.js  exports-page.js  group-detail-page.js  groups-page.js  login-page.js  nav.js  supabase-client.js
overview-docs/: MASTER_OVERVIEW.md  OPS_POLICY.md
scripts/: process_application.py
scripts/sql/: 001_supabase_schema.sql  002_supabase_auth_rls.sql
src/housing_processor/: __init__.py  bootstrap.py  config.py  main.py
src/housing_processor/application/: __init__.py  extraction_snapshot.py
src/housing_processor/application/commands/: __init__.py  export.py  ingest.py  process.py  review.py
src/housing_processor/application/contracts/: __init__.py  excel.py  (+1 more)
src/housing_processor/domain/: __init__.py
src/housing_processor/infrastructure/: __init__.py  support.py
src/housing_processor/observability/: __init__.py  logging.py
src/housing_processor/presentation/: __init__.py
tests/contract/: README.md
tests/end_to_end/: README.md
tests/fixtures/: 00000001-Patrick-Sullivan-Student-App.docx  README.md
tests/integration/: README.md
tests/unit/: test_auth.py  test_delete_applicant.py  test_domain_smoke.py  test_durkin_parser.py  test_field_pickup.py
(+86 files in other folders)
