[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housing-processor"
version = "0.1.0"
description = "Student Housing Application Processing System — Phase 1 deterministic MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "rapidfuzz>=3.10.0",
    "phonenumbers>=8.13.0",
    "python-multipart>=0.0.17",
    "psycopg[binary]>=3.2.0",
    "supabase>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
dashboard = [
    "streamlit>=1.40.0",
]

[project.scripts]
housing-processor = "housing_processor.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
